<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SchoolDirectoryDetailsPage">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_school_dir_details_titleview_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/school_name"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toTopOf="@+id/topGuideLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_school_dir_overview_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/overview"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/fragment_school_dir_details_titleview_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_school_dir_details_performance_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/sat"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fragment_school_dir_overview_id"
        app:layout_constraintStart_toStartOf="@+id/fragment_school_dir_overview_id"
        app:layout_constraintTop_toBottomOf="@+id/fragment_school_dir_overview_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_school_dir_details_math_score_view_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato"
        android:text="@string/math_score"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_school_dir_details_dash_id"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/fragment_school_dir_details_dash_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_school_dir_details_reading_score_view_id"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:text="@string/reading_score"
        app:layout_constraintStart_toStartOf="@+id/fragment_school_dir_details_math_score_view_id"
        app:layout_constraintTop_toBottomOf="@+id/fragment_school_dir_details_math_score_view_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_school_dir_details_writing_score_view_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/writing_score"
        app:layout_constraintStart_toStartOf="@+id/fragment_school_dir_details_reading_score_view_id"
        app:layout_constraintTop_toBottomOf="@+id/fragment_school_dir_details_reading_score_view_id" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_school_dir_details_dash_id"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/fragment_school_dir_details_performance_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_school_dir_details_performance_title"
        app:srcCompat="@drawable/dr_dashed_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGdLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />
</androidx.constraintlayout.widget.ConstraintLayout>